--- a/views/discord.ejs
+++ b/views/discord.ejs
@@ -96,4 +96,9 @@
     </a>
   </div>
 </body>
+<footer>
+      &copy; 2025 Tikssave.com — All rights reserved. |
+      <a href="/privacy">Privacy Policy</a> |
+      <a href="/terms">Terms of Service</a>
+    </footer>
 </html>
