--- a/views/index.ejs
+++ b/views/index.ejs
@@ -371,7 +371,7 @@
   
 <!-- Add this block right below your thumbnail image and above the download buttons -->
 
-<% if (videoData.hdplay || videoData.play) { %>
+<% if (videoData && (videoData.hdplay || videoData.play)) { %>
   <video controls style="max-width: 100%; border-radius: 14px; margin-bottom: 20px;" poster="<%= videoData.cover %>">
     <% if (videoData.hdplay) { %>
       <source src="<%= videoData.hdplay %>" type="video/mp4" />
